--- a/coastalapp/templates/employees/employee_form.html
+++ b/coastalapp/templates/employees/employee_form.html
@@ -22,10 +22,12 @@
             <label for="last_name">Last Name: </label>
             <input id="last_name" type="text" name="last_name" value="{{ employee.last_name }}">
         </fieldset>
+        {% if employee.id is None %}
         <fieldset>
             <label for="start_date">Start Date: </label>
             <input id="start_date" type="date" name="start_date" value="{{ employee.start_date }}">
         </fieldset>
+        {% endif %}
         <fieldset>
           <label for="is_supervisor">Is employee a department supervivsor?</label>
           <select id="is_supervisor" type="text" name="is_supervisor" value="{{ employee.is_supervisor }}">
