--- a/coastalapp/templates/vehicles/vehicle_form.html
+++ b/coastalapp/templates/vehicles/vehicle_form.html
@@ -7,9 +7,14 @@
 	</head>
 	<body>
 		<h1>Vehicle Form</h1>
+		{% if vehicle.id is not None %}
+        	<form action="{% url 'coastalapp:vehicle' vehicle.id %}" method="post">
+    	{% else %}
+			<form action="{% url 'coastalapp:vehicle_list' %}" method="post">
+		    {% endif %}
 
-		<form action="{% url 'coastalapp:vehicle_list' %}" method="post">
 			{% csrf_token %}
+			{% if vehicle.id is None %}
 			<fieldset>
 				<label for="make">Make: </label>
 				<input id="make" type="text" name="make" />
@@ -26,6 +31,17 @@
 				<label for="decommission_date">Decommission Date: </label>
 				<input id="decommission_date" type="date" name="decommission_date" />
 			</fieldset>
+			{% endif %}
+			{% if vehicle.id is not None %}
+			<fieldset>
+            <label for="employee_id">Employee: </label>
+            <select id="employee_id" type="text" name="employee_id">
+                    {% for employee in all_employees %}
+                        <option {% if employee.id == vehicle.employee_id %}selected{% endif %} value="{{ employee.id }}">{{ employee.first_name }} {{ employee.last_name }}</option>
+                    {% endfor %}
+            </select>
+        	</fieldset>
+			{% endif %}
 
 			<input type="submit" value="Add It" />
 		</form>
