added edit annd delete functionality to jobs

--- a/coastalapp/templates/jobs/job_details.html
+++ b/coastalapp/templates/jobs/job_details.html
@@ -9,15 +9,13 @@
 </section>
 
 {% if user.is_authenticated %}
-<section id="job-actions" style="display: flex">
-	<form action="{% url 'coastalapp:job_edit_form' job.id %}" method="GET">
-		{% csrf_token %}
-		<button class="button">Edit</button>
-	</form>
-	<form action="{% url 'coastalapp:job' job.id %}" method="POST">
-		{% csrf_token %}
-		<input type="hidden" name="actual_method" value="DELETE" />
-		<button class="button">Delete</button>
-	</form>
-</section>
+<form action="{% url 'coastalapp:job_edit_form' job.id %}" method="GET">
+	{% csrf_token %}
+	<button class="button">Assign</button>
+</form>
+<form action="{% url 'coastalapp:job' job.id %}" method="POST">
+	{% csrf_token %}
+	<input type="hidden" name="actual_method" value="DELETE" />
+	<button class="button">Delete</button>
+</form>
 {% endif %} {% endblock %}
