--- a/coastalapp/templates/jobs/job_form.html
+++ b/coastalapp/templates/jobs/job_form.html
@@ -7,6 +7,7 @@
     <form action="{% url 'coastalapp:job_list' %}" method="POST">
 {% endif %}
     {% csrf_token %}
+    {% if job.id is none %}
     <fieldset>
         <label for="title">Title: </lable>
         <input id="title" type="text" name="title" value="{{ job.title }}">
@@ -19,10 +20,12 @@
         <label for="end_date">End Date: </label>
         <input id="end_date" type="date" name="end_date" value={{ job.end_date }}>
     </fieldset>
+    {%endif%}
     {% if job.id is not None %}
+    <input type="hidden" name="actual_method" value="PUT" />
 			<fieldset>
-            <label for="assigned_employee_id">Assign: </label>
-            <select id="assigned_employee_id" type="text" name="assigned_employee_id">
+            <label for="employee_id">Assign: </label>
+            <select id="employee_id" type="text" name="employee_id">
                     {% for employee in all_employees %}
                         <option {% if employee.id == job.employee_id %}selected{% endif %} value="{{ employee.id }}">{{ employee.first_name }} {{ employee.last_name }}</option>
                     {% endfor %}
