--- a/coastalapp/templates/vehicles/vehicle_details.html
+++ b/coastalapp/templates/vehicles/vehicle_details.html
@@ -5,7 +5,7 @@
 <section class="vehicle-details">
 	<h2>{{ vehicle.make }}</h2>
 	<h4>Manufacturer: {{ vehicle.manufacturer }}</h4>
-	<h4>Pruchased on: {{ vehicle.purchase_date }}</h4>
+	<h4>Purchased on: {{ vehicle.purchase_date }}</h4>
 	{% if vehicle.employee %}
 	<h4>
 		Assigned to: {{vehicle.employee.first_name}} {{vehicle.employee.last_name}}
