--- a/coastalapp/templates/vehicles/vehicle_form.html
+++ b/coastalapp/templates/vehicles/vehicle_form.html
@@ -28,8 +28,8 @@
 				<input id="purchase_date" type="date" name="purchase_date" />
 			</fieldset>
 			<fieldset>
-				<label for="decommission_date">Decommission Date: </label>
-				<input id="decommission_date" type="date" name="decommission_date" />
+				<label for="retired_date">retired Date: </label>
+				<input id="retired_date" type="date" name="retired_date" />
 			</fieldset>
 			{% endif %}
 			{% if vehicle.id is not None %}
