--- a/coastalapp/templates/vehicles/vehicle_list.html
+++ b/coastalapp/templates/vehicles/vehicle_list.html
@@ -19,7 +19,7 @@
 			class="employee-name"
 			href="{% url 'coastalapp:vehicle' vehicle.id %}"
 		>
-			{{ vehicle.make }}
+			<h3 class="vehicle-name">{{ vehicle.make }}</h3>
 		</a>
 	</li>
 	{% endfor %}
